--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "azure:deploy": "az storage blob upload-batch -s dist -d $web --account-name natalinasember --overwrite",
+    "azure:build:deploy": "npm run build && npm run azure:deploy"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
